manifests/helloword_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  type: NodePort
  selector:
    app: helloworld
    tier: web
  ports:
  - name: http
    port: 8080
    targetPort: 8080
