manifests/helloworld_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
   tls:
   - hosts:
     - venkyhelloworld.com
     secretName: myhelloworld-com-tls
   defaultBackend:
      service:
         name: helloworld
         port:
            number: 8080
